Frontend FIX background not covering whole page on pages smaller than screen height

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -12,7 +12,8 @@ html, body, .lrg-screen-center {
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	height: 100%;
+	height: auto;
+    min-height: 100vh;
 
 	font-size: $font-size;
 	font-family: $font-family;
@@ -49,7 +50,7 @@ section.box {
 }
 
 section.main {
-	height: auto;
+    height: auto;
 	min-height: 100vh;
 	width: 100%;
 
@@ -58,7 +59,8 @@ section.main {
 		float: left;
 		margin-left: 150px;
 	    width: calc(100% - 150px);
-	    height: 100%;
+	    height: auto;
+        min-height: 100vh;
 		background: $colorBackground;
         transition: all 150ms ease-in-out;
         @media screen and (max-width: 600px) {
@@ -239,3 +241,21 @@ nemea-events .modal-dialog {
     border-bottom: 2px solid darken($colorItemBackground, 15%);
 }
 
+.card {
+    position: relative;
+    height: 100%;
+    text-align: center;
+}
+.card-body {
+    padding: 0;
+}
+.card-content {
+    padding: 20px;
+}
+.card-header {
+    background: $colorMain;
+    padding-bottom: 0;
+    h4 {
+        color: $colorTextInverse;
+    }
+}
